[feat] : updt file

--- a/Client/src/app/auth/login/login.component.html
+++ b/Client/src/app/auth/login/login.component.html
@@ -6,8 +6,7 @@
             <!-- Logo -->
             <div class="w-36">
                 <img mat-card-image src="assets/images/christ.jpg">
-                <h2 class="text-6xl font-bold">LEASY<span class="text-cyan-500">D</span>RIVE</h2>
-                <h4>"Piloter vos actifs"</h4>
+                <h2 class="text-6xl font-bold"><span class="text-cyan-500">O</span>rdonance</h2>
             </div>
 
             <!-- Title -->
@@ -89,15 +88,6 @@
                         [diameter]="24"
                         [mode]="'indeterminate'"></mat-progress-spinner>
                 </button>
-
-                <!-- Magic sign in -->
-                <a
-                    [routerLink]="['/magic-login']"
-                    class="w-full mt-6 text-white py-2 px-4 rounded focus:outline-none focus:shadow-outline"
-                    mat-flat-button
-                    [color]="'accent'">
-                    <span>Connexion magique</span>
-                </a>
             </form>
         </div>
     </div>
