--- a/Client/src/app/auth/logout/logout.component.html
+++ b/Client/src/app/auth/logout/logout.component.html
@@ -3,7 +3,7 @@
         <div class="w-full max-w-80 sm:w-80 mx-auto sm:mx-0">
             <!-- Logo -->
             <div class="w-12 mx-auto">
-                <img mat-card-image src="assets/images/leasyGo.jpg">
+                <img mat-card-image src="assets/images/christ.jpg">
             </div>
 
             <!-- Title -->
