--- a/Client/src/app/elder-pastoral/elder-pastoral.component.css
+++ b/Client/src/app/elder-pastoral/elder-pastoral.component.css
@@ -13,8 +13,8 @@
     border-radius: 4px;
     overflow: hidden;
     display: flex;
-    flex-direction: column; /* Ajouté */
-    align-items: stretch; /* Ajouté pour s'assurer que les items s'étendent sur toute la largeur disponible */
+    flex-direction: column; 
+    align-items: stretch; 
 }
 
   .team-box {
@@ -75,4 +75,3 @@
   .example-list.cdk-drop-list-dragging .team-box:not(.cdk-drag-placeholder) {
     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
   }
-  /* example-box */
