[feat] : ajouter le role de region

--- a/Client/src/app/components/member-dialog/member-dialog.component.html
+++ b/Client/src/app/components/member-dialog/member-dialog.component.html
@@ -93,6 +93,10 @@
                 <mat-label>Le nom de famille</mat-label>
                 <input matInput placeholder="Homme ou Femme" formControlName="name" />
             </mat-form-field>
+            <mat-form-field class="col-span-full w-full">
+                <mat-label>region</mat-label>
+                <input matInput placeholder="Region" formControlName="region" />
+            </mat-form-field>
         </div>
        
     </form>
