--- a/Client/src/app/elder-pastoral/elder-pastoral.component.css
+++ b/Client/src/app/elder-pastoral/elder-pastoral.component.css
@@ -8,7 +8,17 @@
   
   .example-list {
     border: solid 1px #ccc;
-    background: white;
+    background: #64748b;
+    min-height: 60px;
+    border-radius: 4px;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column; 
+    align-items: stretch; 
+}
+  .family-list {
+    border: solid 1px #ccc;
+    background: #cbd5e1;
     min-height: 60px;
     border-radius: 4px;
     overflow: hidden;
