--- a/Client/src/app/components/member-dialog/member-dialog.component.html
+++ b/Client/src/app/components/member-dialog/member-dialog.component.html
@@ -78,11 +78,11 @@
             </div>
         </div>
 
-        <div class="w-full" formGroupName="leaderRoles">
+        <div class="w-full">
             <mat-form-field class="col-span-full w-full">
-                <mat-label>De quel Région</mat-label>
-                <mat-select placeholder="Quel Région" formControlName="roles">
-                    <mat-option *ngFor="let role of roles" [value]="role.value">{{role.name}}</mat-option>
+                <mat-label>De quel organisation</mat-label>
+                <mat-select placeholder="Quel Région" formControlName="leaderRoles">
+                    <mat-option *ngFor="let role of leaderRoles$ | async" [value]="role._id">{{role.roles}}</mat-option>
                 </mat-select>
             </mat-form-field>
            
