--- a/Client/src/app/components/member-dialog/member-dialog.component.html
+++ b/Client/src/app/components/member-dialog/member-dialog.component.html
@@ -28,6 +28,13 @@
             <mat-label>Date de néssance</mat-label>
             <input matInput placeholder="Année de néssance" formControlName="birthDate" />
         </mat-form-field>
+
+       <!-- <mat-form-field appearance="fill">
+            <mat-label>Date de néssance</mat-label>
+            <input matInput [matDatepicker]="picker" formControlName="birthDate" (dateChange)="picker.close()">
+            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker #picker></mat-datepicker>
+        </mat-form-field>-->
         
         <mat-form-field class="col-span-full">
             <mat-label>numéro de téléphone</mat-label>
@@ -55,6 +62,10 @@
             </div>
 
             <div class="flex flex-col w-full">
+                <mat-checkbox formControlName="AaronicPriesthood">Prétrise d'aaron</mat-checkbox>
+            </div>
+
+            <div class="flex flex-col w-full">
                 <mat-checkbox formControlName="PriestHood">Prétrise</mat-checkbox>
             </div>
 
@@ -78,6 +89,19 @@
             </div>
         </div>
 
+        <mat-form-field class="col-span-full">
+            <mat-label>Date de la pretrise d'aaron</mat-label>
+            <input matInput placeholder="Année de néssance" formControlName="aaronicPriesthoodReception" />
+        </mat-form-field>
+        
+
+       <!-- <mat-form-field appearance="fill">
+            <mat-label>Date de la pretrise d'aaron</mat-label>
+            <input matInput [matDatepicker]="pickerPriesthood" formControlName="aaronicPriesthoodReception" (dateChange)="picker.close()">
+            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker #pickerPriesthood></mat-datepicker>
+        </mat-form-field> -->
+
         <div class="w-full">
             <mat-form-field class="col-span-full w-full">
                 <mat-label>De quel organisation</mat-label>
@@ -85,7 +109,6 @@
                     <mat-option *ngFor="let role of leaderRoles$ | async" [value]="role._id">{{role.roles}}</mat-option>
                 </mat-select>
             </mat-form-field>
-           
         </div>
 
         <div class="w-full" formGroupName="_family">
