[feat] : updt in angular 17 w/ standalone true insert routes

--- a/Client/src/app/auth/login/login.component.html
+++ b/Client/src/app/auth/login/login.component.html
@@ -15,7 +15,7 @@
                 <div>Vous n'avez pas de compte?</div>
                 <a
                     class="ml-1 text-primary-500 hover:underline text-cyan-500"
-                    [routerLink]="['/register']">Inscription
+                    routerLink="/register">Inscription
                 </a>
             </div>
 
