--- a/Client/src/app/auth/logout/logout.component.html
+++ b/Client/src/app/auth/logout/logout.component.html
@@ -25,7 +25,7 @@
                 <span>Allez à</span>
                 <a
                     class="ml-1 text-primary-500 hover:underline"
-                    [routerLink]="['/login']">connexion
+                    routerLink="/login">connexion
                 </a>
             </div>
         </div>
