--- a/Client/src/app/auth/register/register.component.html
+++ b/Client/src/app/auth/register/register.component.html
@@ -15,7 +15,7 @@
                 <div>Vous avez déjà un compte?</div>
                 <a
                     class="ml-1 text-primary-500 hover:underline text-cyan-500"
-                    [routerLink]="['/login']">Connexion
+                    routerLink="/login">Connexion
                 </a>
             </div>
 
