--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -2,7 +2,7 @@
   <button mat-button routerLink="/login" *ngIf="!authService.isLoggedIn()">Connexion</button>
   <button mat-button routerLink="/register" *ngIf="!authService.isLoggedIn()">Inscription</button>
   <button mat-button routerLink="/profile" *ngIf="authService.isLoggedIn()">Profile</button>
-  <button mat-button [routerLink]="['/logout']" *ngIf="authService.isLoggedIn()">Déconnexion</button>
+  <button mat-button routerLink="/logout" *ngIf="authService.isLoggedIn()">Déconnexion</button>
 </mat-toolbar>
 
 <router-outlet></router-outlet>
