--- a/Client/src/app/components/member-dialog/member-dialog.component.html
+++ b/Client/src/app/components/member-dialog/member-dialog.component.html
@@ -24,17 +24,22 @@
             <input matInput placeholder="email" formControlName="email" />
         </mat-form-field>
         
-        <mat-form-field class="col-span-full">
+       <!--<mat-form-field class="col-span-full">
             <mat-label>Date de néssance</mat-label>
             <input matInput placeholder="Année de néssance" formControlName="birthDate" />
-        </mat-form-field>
+        </mat-form-field>-->
 
-       <!-- <mat-form-field appearance="fill">
+        <mat-form-field appearance="fill">
             <mat-label>Date de néssance</mat-label>
-            <input matInput [matDatepicker]="picker" formControlName="birthDate" (dateChange)="picker.close()">
+            <input 
+                matInput 
+                [matDatepicker]="picker" 
+                [formControl]="birthDate" 
+                (dateChange)="changeDate($event)"
+            >
             <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
             <mat-datepicker #picker></mat-datepicker>
-        </mat-form-field>-->
+        </mat-form-field>
         
         <mat-form-field class="col-span-full">
             <mat-label>numéro de téléphone</mat-label>
@@ -62,7 +67,7 @@
             </div>
 
             <div class="flex flex-col w-full">
-                <mat-checkbox formControlName="AaronicPriesthood">Prétrise d'aaron</mat-checkbox>
+                <mat-checkbox formControlName="AaronicPriesthood" (change)="onCheckboxChange($event)">Prétrise d'aaron</mat-checkbox>
             </div>
 
             <div class="flex flex-col w-full">
@@ -89,18 +94,24 @@
             </div>
         </div>
 
-        <mat-form-field class="col-span-full">
+       <!-- <mat-form-field class="col-span-full">
             <mat-label>Date de la pretrise d'aaron</mat-label>
             <input matInput placeholder="Année de néssance" formControlName="aaronicPriesthoodReception" />
-        </mat-form-field>
+        </mat-form-field> -->
         
 
-       <!-- <mat-form-field appearance="fill">
+        <mat-form-field *ngIf="ordinancesTrue" appearance="fill">
             <mat-label>Date de la pretrise d'aaron</mat-label>
-            <input matInput [matDatepicker]="pickerPriesthood" formControlName="aaronicPriesthoodReception" (dateChange)="picker.close()">
-            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+            <input 
+                matInput 
+                [matDatepicker]="pickerPriesthood" 
+                [formControl]="aaronicPriesthoodReception"
+                (dateChange)="changeDateAaronic($event)" 
+                
+            >
+            <mat-datepicker-toggle matSuffix [for]="pickerPriesthood"></mat-datepicker-toggle>
             <mat-datepicker #pickerPriesthood></mat-datepicker>
-        </mat-form-field> -->
+        </mat-form-field>
 
         <div class="w-full">
             <mat-form-field class="col-span-full w-full">
