--- a/Client/src/app/home/home.component.html
+++ b/Client/src/app/home/home.component.html
@@ -19,11 +19,11 @@
                 <ng-content></ng-content>
             </app-elder-pastoral>
         </mat-tab>
-        <!--<mat-tab *ngIf="authService.hasRole('Prêtrise') || authService.hasRole('Président De Branche')" label="envois sms + email">
-            <app->
+        <mat-tab *ngIf="authService.hasRole('Prêtrise') || authService.hasRole('Président De Branche')" label="envois sms + email">
+            <app-email>
                 <ng-content></ng-content>
-            </app->
-        </mat-tab>-->
+            </app-email>
+        </mat-tab>
         <mat-tab *ngIf="authService.hasRole('Société Secours') || authService.hasRole('Président De Branche')" label="Vue de la société de secours">
                 <app-societe>
                     <ng-content></ng-content>
