--- a/Client/src/app/elder/elder.component.html
+++ b/Client/src/app/elder/elder.component.html
@@ -1,4 +1,8 @@
 <div class="app-elder">
+    <button class="flex m-4" color="primary" mat-button (click)="famillyPage()">
+      <div>Les familles</div>
+      <mat-icon>arrow_right_alt</mat-icon>
+    </button>
     <mat-table [dataSource]="member" class="mat-elevation-z8">
 
         <!-- First Name Column -->
