[feat] : new pastoral

--- a/Client/src/app/elder-pastoral/elder-pastoral.component.html
+++ b/Client/src/app/elder-pastoral/elder-pastoral.component.html
@@ -1,49 +1,158 @@
 <div cdkDropListGroup style="margin:10px; padding:10px;">
   <div>
+    <div class="w-full flex">
+      <form [formGroup]="configForm">
+        <mat-form-field class="col-span-full">
+          <mat-label>Nombre d'équipe</mat-label>
+          <input 
+            matInput
+            type="number" 
+            formControlName="maxTeams" 
+            min="1" 
+            max="30" 
+            class="w-full" 
+            placeholder="Nombre d'équipe"
+            (input)="updateTeams($event)"  
+          >
+       </mat-form-field>
+      </form>
+    </div>
+  </div>
+  <div>
+    <!-- draggable list of members = elders -->
     <div class="example-container">
       <h2>Membres de la prêtrise</h2>
-      <div
+      <!--<div
+        *ngIf="elders$ | async as pretriseMembers"
         cdkDropList
         id="pretriseMembers"
         [cdkDropListData]="pretriseMembers"
         class="example-list"
-        (cdkDropListDropped)="drop($event)">
-        <div class="team-box bg-slate-500" *ngFor="let member of pretriseMembers" cdkDrag>{{member.firstName + ' ' + member.lastName}}</div>
+        (cdkDropListDropped)="dropMember($event)"
+        [cdkDropListEnterPredicate]="onlyMembers"
+      >
+        
+        <div 
+          cdkDrag
+          class="team-box bg-slate-500" 
+          *ngFor="let member of pretriseMembers"
+          [cdkDragData]="getDragMemberData(member, 'member')"
+        >
+          {{member.firstName + ' ' + member.lastName}}
+        </div>
+
+      </div>-->
+      <div
+        cdkDropList
+        id="pretriseMembers"
+        [cdkDropListData]="filteredElders"
+        class="example-list"
+        (cdkDropListDropped)="dropMember($event)"
+        [cdkDropListEnterPredicate]="onlyMembers"
+      >
+        <div 
+          cdkDrag
+          class="team-box bg-slate-500" 
+          *ngFor="let member of filteredElders"
+          [cdkDragData]="getDragMemberData(member, 'member')"
+        >
+          {{ member.firstName + ' ' + member.lastName }}
+        </div>
       </div>
     </div>
 
+    <!-- draggable list of families = families -->
     <div class="example-container">
       <h2>Les familles</h2>
-      <div
-        cdkDropList
-        id="familyMembers"
-        [cdkDropListData]="familyMembers"
+      <!--<div
+        *ngIf="families$ | async as familyMembers"
         class="family-list"
-        (cdkDropListDropped)="drop($event)">
-        <div class="family-box bg-slate-300" *ngFor="let family of familyMembers" cdkDrag>{{family.name}}</div>
+        id="familyMembers"
+        cdkDropList
+        [cdkDropListData]="familyMembers"
+        (cdkDropListDropped)="dropFamily($event)"
+        [cdkDropListEnterPredicate]="onlyFamilies"
+      >
+        <div 
+          cdkDrag
+          class="family-box bg-slate-300" 
+          *ngFor="let family of familyMembers"
+          [cdkDragData]="getDragFamilyData(family, 'family')"
+        >
+          {{family.name}}
+        </div>
+      </div>-->
+      <div
+        class="family-list"
+        id="familyMembers"
+        cdkDropList
+        [cdkDropListData]="filteredFamilies"
+        (cdkDropListDropped)="dropFamily($event)"
+        [cdkDropListEnterPredicate]="onlyFamilies"
+      >
+        <div 
+          cdkDrag
+          class="family-box bg-slate-300" 
+          *ngFor="let family of filteredFamilies"
+          [cdkDragData]="getDragFamilyData(family, 'family')"
+        >
+          {{ family.name }}
+        </div>
       </div>
     </div>
+
   </div>
 
-  <div class="example-container" *ngFor="let team of teams; index as i">
-      <h2>Équipe {{i + 1}}</h2>
+ <!-- <ng-container *ngIf="teams$ | async as teams">-->
+    <div  class="example-container" *ngFor="let team of teams; index as i">
+      
+      <!--<h2>Équipe {{i + 1}}</h2>-->
+      <h2>{{team.name}}</h2>
+      <!-- 
+        droppable list of members = elders
+        in team 
+      -->
       <div
         cdkDropList
-        [id]="i.toString()"
-        [cdkDropListData]="team.members"
         class="example-list"
-        (cdkDropListDropped)="drop($event)"
+        [id]="i.toString()"
+        [cdkDropListData]="team._members"
+        (cdkDropListDropped)="dropMember($event)"
+        [cdkDropListEnterPredicate]="onlyMembers"
       >
-        <div class="team-box" *ngFor="let member of team.members" cdkDrag>{{getMemberName(member._id || '')}}</div>
+        <div 
+          cdkDrag  
+          class="team-box" 
+          *ngFor="let member of team._members"
+          [cdkDragData]="getDragMemberData(member, 'member')" 
+        >
+          {{getMemberName(member._id || '')}}
+        </div>
       </div>
-    <div
-      cdkDropList
-      [id]="'families' + i.toString()"
-      [cdkDropListData]="team.families"
-      class="family-list"
-      (cdkDropListDropped)="drop($event)"
-    >
-      <div class="family-box" *ngFor="let family of team.families" cdkDrag>{{getFamilyName(family._id || '')}}</div>
+      <!-- 
+        droppable list of families = families
+        in team 
+      -->
+      <!--[id]="'families' + i.toString()"-->
+      <div
+        cdkDropList
+        class="family-list"
+        [id]="i.toString()"
+        [cdkDropListData]="team._families"
+        [cdkDropListEnterPredicate]="onlyFamilies"
+        (cdkDropListDropped)="dropFamily($event)"
+      >
+        <div 
+          cdkDrag
+          class="family-box"
+          *ngFor="let family of team._families"
+          [cdkDragData]="getDragFamilyData(family, 'family')"
+          
+        >
+          {{getFamilyName(family._id || '')}}
+        </div>
+      </div>
+
     </div>
-  </div>
+ <!-- </ng-container>-->
 </div>
